# ling

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  HACKING  INSTALL  NEWS  README  TODO  configure.sh  spec.in  wntrling.pc.in
cmake/: WntrLingConfig.cmake.in  WntrLingConfigVersion.cmake.in
include/wntr/: wntrling.hpp
include/wntr/ling/: handles.hpp  meanings.hpp  parser.hpp  parser.hpp~  syntax.hpp  syntax.hpp~  wntrling.hpp
src/: CMakeLists.txt  adaptors.cpp  adaptors.hpp  handles.cpp  meanings.cpp  meanings.hpp  parser.cpp  parser.cpp~  parser.hpp  syntax.cpp  syntax.hpp  wntrling.cpp  wntrling.hpp
